# CueMesh2

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/: settings.local.json.tmp.852297.a5dc58d73223
.github/workflows/: ci.yml  release.yml
crates/cuemesh2-client/: Cargo.toml
crates/cuemesh2-client/src/: connection.rs  main.rs  state.rs  ui.rs
crates/cuemesh2-controller/: Cargo.toml
crates/cuemesh2-controller/src/: editor.rs  main.rs  preflight.rs  server.rs  state.rs  sync.rs  ui.rs
crates/cuemesh2-controller/tests/: handshake.rs
crates/cuemesh2-media/: Cargo.toml
crates/cuemesh2-media/examples/: play_file.rs
crates/cuemesh2-media/src/: lib.rs  pipeline.rs
crates/cuemesh2-shared/: Cargo.toml
crates/cuemesh2-shared/src/: hashing.rs  lib.rs  protocol.rs  show.rs
crates/multiplex-client/: Cargo.toml
crates/multiplex-client/src/: connection.rs  discovery.rs  identity.rs  lib.rs  main.rs  state.rs  ui.rs  update.rs
crates/multiplex-client/tests/: update_over_wire.rs  update_staging.rs
crates/multiplex-controller/: Cargo.toml
crates/multiplex-controller/src/: discovery.rs  dispatch.rs  editor.rs  known_clients.rs  lib.rs  main.rs  preflight.rs  server.rs  state.rs  sync.rs  ui.rs  update.rs
crates/multiplex-controller/tests/: dispatch.rs  handshake.rs  update_push.rs
crates/multiplex-media/: Cargo.toml
crates/multiplex-media/examples/: crossfade.rs  play_file.rs
crates/multiplex-media/src/: fades.rs  lib.rs  pipeline.rs
crates/multiplex-shared/: Cargo.toml
crates/multiplex-shared/examples/: update_keygen.rs  update_sign.rs
crates/multiplex-shared/src/: hashing.rs  lib.rs  protocol.rs  show.rs  update.rs
docs/: OPERATION.md  PROGRESS.md  ui-improvements-plan.md
examples/: example_show.cuemesh.toml  example_show.multiplex.toml
scripts/: bundle-macos.sh  bundle-windows.ps1
