[package]
name = "multiplex-media"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "GStreamer-backed two-layer video compositor pipeline for MultiPlex clients."

[dependencies]
multiplex-shared = { workspace = true }
gstreamer = { workspace = true }
gstreamer-video = { workspace = true }
gstreamer-app = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }



[dev-dependencies]
tracing-subscriber = { workspace = true }
